--- a/Activity1_Saliring.html
+++ b/Activity1_Saliring.html
@@ -26,7 +26,7 @@
 </html>
   
 
-<p> I'm Renier P. Saliring. the picture above is my recent project for our subject work and life of rizal <p>
+<p> Renier P. Saliring is my name. Currently pursuing a Bachelor of Science in Information Technology at the University of Science and Technology of Southern Philippines, I am a 20-year-old resident from Bugo Cagayan De Oro City. <p>
 
 </body>
 </html>
